Slow content causes choppy scrolling https://bugs.webkit.org/show_bug.cgi?id=79403

Patch by Dave Moore <davemoore@chromium.org> on 2012-02-28
Reviewed by James Robinson.

This code helps make scrolling (via wheel or pad) less choppy
when the content takes a long time to respond to the fake mouse moves
generated during scrolls.

 * page/EventHandler.cpp:
(WebCore):
(MaximumDurationTracker):
(WebCore::MaximumDurationTracker::MaximumDurationTracker):
(WebCore::MaximumDurationTracker::~MaximumDurationTracker):
(WebCore::EventHandler::EventHandler):
(WebCore::EventHandler::clear):
(WebCore::EventHandler::mouseMoved):
(WebCore::EventHandler::dispatchFakeMouseMoveEventSoon):
(WebCore::EventHandler::dispatchFakeMouseMoveEventSoonInQuad):
* page/EventHandler.h:

Canonical link: https://commits.webkit.org/96910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109151 268f45cc-cd09-0410-ab3c-d52691b4dbfc